# monkey

./: CMakeLists.txt  LICENSE  README.md  cut.txt  makefile
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  common.cpp  common.h  lib  mul.cpp  mul.h
tests/: CMakeLists.txt  main.cpp  mul_test.cpp
